ordered some files

--- a/src/Experiment.ipynb
+++ b/src/Experiment.ipynb
@@ -16,9 +16,9 @@
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
     "from torch.utils.data import random_split\n",
-    "from DataLoader import DataLoaderManager\n",
-    "from Train import Trainer\n",
-    "from Loss import Loss\n",
+    "from Model.DataLoader import DataLoaderManager\n",
+    "from Model.Train import Trainer\n",
+    "from Model.Loss import Loss\n",
     "import segmentation_models_pytorch as smp"
    ]
   },
