experiments and test

--- a/src/Significiance.ipynb
+++ b/src/Significiance.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,6 +130,30 @@
     "test_mannnwhitneyu(precision_bce_dice_b32, precision_bce_dice_50, tested=\"précision\")\n",
     "test_mannnwhitneyu(recall_bce_dice_b32, recall_bce_dice_50, tested=\"recall\")\n",
     "test_mannnwhitneyu(f1_score_bce_dice_b32, f1_score_bce_dice_50, tested=\"F1 score\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistique U: 1932.0 Valeur p: 2.625437073202313e-06\n",
+      "Les différences de précision sont statistiquement significatives.\n",
+      "Statistique U: 743.0 Valeur p: 0.0004799214751372957\n",
+      "Les différences de recall sont statistiquement significatives.\n",
+      "Statistique U: 1939.0 Valeur p: 2.0707415711711337e-06\n",
+      "Les différences de F1 score sont statistiquement significatives.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_mannnwhitneyu(precision, precision_bce_dice_50, tested=\"précision\")\n",
+    "test_mannnwhitneyu(recall, recall_bce_dice_50, tested=\"recall\")\n",
+    "test_mannnwhitneyu(f1_score, f1_score_bce_dice_50, tested=\"F1 score\")"
    ]
   }
  ],
